update resources page style

--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -20,16 +20,16 @@
         <symbol id="type" viewBox="0 0 16 18" fill="none">
         {% include 'svg/icon-resource-type.svg' %}
         </symbol>
-        <symbol id="plus" width="10" height="10" viewBox="0 0 10 10" fill="none">
+        <symbol id="plus" viewBox="0 0 24 24" fill="none">
         {% include 'svg/icon-plus.svg' %}
         </symbol>
-        <symbol id="minus" width="10" height="2" viewBox="0 0 10 2" fill="none">
+        <symbol id="minus" viewBox="0 0 24 24" fill="none">
         {% include 'svg/icon-minus.svg' %}
         </symbol>
         <symbol id="external" width="16" height="16" viewBox="0 0 16 16" fill="none">
         {% include 'svg/external.svg' %}
         </symbol>
-        <symbol id="close" width="20" height="20" viewBox="0 0 20 20" fill="none">
+        <symbol id="close" viewBox="0 0 24 24" fill="none">
         {% include 'svg/icon-x.svg' %}
         </symbol>
     </svg>
