--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -46,7 +46,7 @@
         .filter-title {
           column-gap: rem(8);
           display: flex;
-          font-family: 'Work Sans';
+          font-family: 'Work Sans', sans-serif;
           font-weight: 600;
           margin-left: rem(8);
 
