--- a/src/assets/styles/abstracts/_grid.scss
+++ b/src/assets/styles/abstracts/_grid.scss
@@ -33,17 +33,14 @@
 html.grid::before {
   background-image: var(--background-columns);
   background-size: var(--background-width) 100%;
-  bottom: 0;
   content: '';
-  left: 0;
+  inset: 0;
   margin-left: auto;
   margin-right: auto;
   max-width: var(--max-width);
   min-height: 100vh;
   pointer-events: none;
   position: fixed;
-  right: 0;
-  top: 0;
   width: calc(100% - (2 * var(--offset)));
   z-index: 1000;
 }
