GH-454: add resources page (resolves #454, #515) (#523)
* GH-454: add the base template for Resources page

* update layout of resources page

* GH-454: add resources data

* remove resource prefix from resources css style rules

* add single resource layout and display resource preview on authoring interface

* GH-454: generate resourceData.json for filtering

* fix lint errors

* add custom filter to get label of resource metadata objects and display the metadata label for resource tags

* fix lint issues

* GH-454: add js code handling the render & filtering on resources page

* GH-454: update config.yml for saving resources

* GH-454: Projects and Tools page is now only used for projects

* add svg icons for resource topic and type

* update layout of the resources page

* GH-454: add checkbox style for the resources page

* GH-454: populate filter checkboxes

* GH-454: implement apply filter function

* add components for filter

* update layout of resources page

* add svg assets for filter expand and collapse icons

* update layout for filter and resources page

* update resources page style

* add dynamic filter scripts

* fix lint issues

* update based on PR feedback

* add svg assets for filter tag and external link

* add publishedYear property values for resources

* add new field for thumbnail alt text for resources

* add filter functionalities for resources page

* fix lint issues

* make link work in resources page

* update filter header div to be the expand/collapse button

* fix based on PR feedback

* fix based on PR feedback

* fix: fix a linting error

* update based on PR feedback

* remove unused media files

* fix an issue thumbnail images for resources get rendered with a quotation mark

* fix an issue with resources page alt text

* implement a helper function to replace special characters with entity name

* fix layout issue for resources page

* add thumbn

--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -4,67 +4,31 @@
     {% extends 'layouts/base.njk' %}
 {% endif %}
 
-{% set pageType = 'page--projects-and-tools' %}
+{% set pageType = 'page--projects' %}
 
 {% block content %}
     <article>
         {% include 'partials/components/page-header.njk' %}
-        <section id="projects" class="section section--full">
-            <div class="wrapper">
-                <div class="section__content">
-                    <span class="hr"></span>
-                    <h2>Projects</h2>
-                    <div class="projects">
-                        {% for project in collections.projects %}
-                        <article class="project">
-                            {% if project.data.thumbnailImage %}
-                            <img class="thumbnail" src="{{ project.data.thumbnailImage }}" role="presentation" alt="{{
-                                project.data.thumbnailAltText
-                                if project.data.thumbnailAltText
-                                else "Thumbnail image for " + project.data.projectName
-                            }}" />
-                            {% else %}
-                            <img class="thumbnail" src="/assets/images/project-placeholder.svg" role="presentation" alt="" />
-                            {% endif %}
-                            <h3>{{ project.data.projectName }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</h3>
-                            {% if project.data.content %}
-                            {% set fullDescription = project.data.description + " [More about " + project.data.projectName + "](" + project.url + ")" %}
-                            {{ fullDescription | markdown | safe }}
-                            {% else %}
-                            {{ project.data.description | markdown | safe }}
-                            {% endif %}
-                            {% if project.data.link %}
-                            <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.projectName }} website</a></p>
-                            {% endif %}
-                        </article>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="tools" class="section section--full">
-            <div class="wrapper">
-                <div class="section__content">
-                    <span class="hr"></span>
-                    <h2>Tools</h2>
-                    <div class="tools">
-                        {% for tool in collections.tools %}
-                        <div class="tool">
-                            <h3>{{ tool.data.title }}{{ " (" + tool.data.shortName + ")" if tool.data.shortName }}</h3>
-                            {{ tool.data.description | markdown | safe }}
-                            {% if tool.data.tags.length > 0 %}
-                            <p class="tags">
-                                {% for tag in tool.data.tags %}
-                                <span class="tag">{{ tag | safe }}</span>
-                                {% endfor %}
-                            </p>
-                            {% endif %}
-                            <p class="tool__link"><a rel="external" href="{{ tool.data.link }}">Visit {{ tool.data.shortName if tool.data.shortName else tool.data.title }} website</a></p>
-                        </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </section>
+        <div class="projects">
+            {% for project in collections.projects %}
+            <article class="project">
+                {% if project.data.thumbnailImage %}
+                <img class="thumbnail" src="{{ project.data.thumbnailImage }}" role="presentation" alt="" />
+                {% else %}
+                <img class="thumbnail" src="/assets/images/project-placeholder.svg" role="presentation" alt="" />
+                {% endif %}
+                <h3>{{ project.data.projectName }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</h3>
+                {% if project.data.content %}
+                {% set fullDescription = project.data.description + " [More about " + project.data.projectName + "](" + project.url + ")" %}
+                {{ fullDescription | markdown | safe }}
+                {% else %}
+                {{ project.data.description | markdown | safe }}
+                {% endif %}
+                {% if project.data.link %}
+                <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.projectName }} website</a></p>
+                {% endif %}
+            </article>
+            {% endfor %}
+        </div>
     </article>
 {% endblock %}
