--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -34,8 +34,9 @@
   'pages/generic',
   'pages/home',
   'pages/history',
-  'pages/projects-tools',
+  'pages/projects',
   'pages/project',
+  'pages/resources',
   'pages/news-ideas',
   'pages/single',
   'pages/team',
