add nav--secondary file back

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -26,6 +26,7 @@
   'components/button',
   'components/image',
   'components/nav',
+  'components/nav--secondary',
   'components/pagination',
   'components/metadata';
 
