--- a/src/assets/styles/components/_nav--secondary.scss
+++ b/src/assets/styles/components/_nav--secondary.scss
@@ -26,19 +26,23 @@
   &:focus {
     background: var(--fl-linkColor, var(--indigo-800));
     border-bottom-color: transparent;
-    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
+    box-shadow:
+      calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)),
+      var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
     color: var(--fl-bgColor, var(--white));
   }
 
   &:active {
     background: var(--fl-linkColor, var(--indigo-500));
-    box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
+    box-shadow:
+      calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)),
+      var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
     color: var(--fl-bgColor);
   }
 
   &::after {
-    background: currentColor;
-    content: "";
+    background: currentcolor;
+    content: '';
     display: inline-block;
     height: 1.5em;
     margin-left: 0.125em;
@@ -47,21 +51,21 @@
     mask-size: 1.5em;
   }
 
-  &:not([rel="external"])::after {
+  &:not([rel='external'])::after {
     margin-bottom: 0;
     mask-image: url('../images/internal.svg');
     width: 1em;
   }
 
-  &[rel~="external"]::after,
-  &[href^="mailto:"]::after {
+  &[rel~='external']::after,
+  &[href^='mailto:']::after {
     margin-bottom: 0.125em;
     mask-image: url('../images/external.svg');
     width: 1.5em;
   }
 
-  &[aria-current="page"],
-  &[data-parent="true"] {
+  &[aria-current='page'],
+  &[data-parent='true'] {
     border-bottom-color: var(--fl-linkColor, var(--indigo-500));
     box-shadow: inset 0 rem(-1) 0 0 var(--fl-bgColor, var(--indigo-500));
     font-weight: var(--fw-bold);
@@ -69,12 +73,16 @@
     &:hover,
     &:focus {
       border-bottom-color: transparent;
-      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
+      box-shadow:
+        calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)),
+        var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
     }
 
     &:active {
       border-bottom-color: transparent;
-      box-shadow: calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)), var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
+      box-shadow:
+        calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)),
+        var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
       color: var(--fl-bgColor);
     }
   }
