--- a/src/_includes/partials/global/stylesheets.njk
+++ b/src/_includes/partials/global/stylesheets.njk
@@ -1,5 +1,2 @@
 <link href="/assets{{ assets['/styles/app.css'] }}" rel="stylesheet" />
-<link href="/lib/infusion/src/framework/core/css/fluid.css" rel="stylesheet">
-<link href="/lib/infusion/src/framework/preferences/css/Enactors.css" rel="stylesheet">
-<link href="/lib/infusion/src/framework/preferences/css/PrefsEditor.css" rel="stylesheet">
-<link href="/lib/infusion/src/framework/preferences/css/SeparatedPanelPrefsEditor.css" rel="stylesheet">
+{% uioStyles %}
