--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -1,8 +1,4 @@
-{% if locale !== 'en-CA' %}
-  {% set language = ' lang="en-CA"' %}
-  {% set direction = ' dir="' + config.languages[locale].dir + '"' %}
-{% endif %}
-<footer {{ language | safe }} {{ direction | safe }} role="contentinfo" class="footer">
+<footer {% if locale !== 'en-CA' %} lang="en-CA" dir="ltr" {% endif %} role="contentinfo" class="footer">
     <div class="logo">
         <a rel="home" href="/">
             {% include "svg/logo-wordmark.svg" %}
