--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,8 +1,4 @@
-{% if locale !== 'en-CA' %}
-  {% set language = ' lang="en-CA"' %}
-  {% set direction = ' dir="' + config.languages[locale].dir + '"' %}
-{% endif %}
-<header {{ language | safe }} {{ direction | safe }} role="banner" class="banner">
+<header {% if locale !== 'en-CA' %} lang="en-CA" dir="ltr" {% endif %} role="banner" class="banner">
     {% include "partials/components/brand.njk" %}
     {% include "partials/components/navigation.njk" %}
 </header>
