feat: implement front-end style for translation links (resolves #629)

--- a/src/_includes/partials/components/page-header.njk
+++ b/src/_includes/partials/components/page-header.njk
@@ -16,6 +16,21 @@
         </p>
         {% endif %}
         <h1>{{ title }}</h1>
+        {% if 'projects' in page.url %}
+        {% for language, languageData in config.languages %}
+                    {% if locale and locale !== language %}
+                        {% set matchedProject = false %}
+                        {% for project in collections['projects_' + language] %}
+                            {% if project.fileSlug === translationKey %}
+                                 {% set matchedProject = project %}
+                            {% endif %}
+                        {% endfor %}
+                        {% if matchedProject %}
+                            <a hreflang="{{ language }}" lang="{{ language }}" dir="{{ config.languages[locale].dir if locale else 'ltr' }}" href="{{ matchedProject.url }}">{% include 'svg/icon-translation.svg' %}{% _i language, "Read in ${locale}", {locale: languageData.name} %}</a>
+                        {% endif %}
+                    {% endif %}
+                {% endfor %}
+        {% endif %}
         {% if intro %}
         <div class="intro">{{ intro | markdown | safe }}</div>
         {% endif %}
