--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,4 +1,4 @@
-<header role="banner" class="banner">
+<header {% if locale !== 'en-CA' %} lang="en-CA" dir="ltr" {% endif %} role="banner" class="banner">
     {% include "partials/components/brand.njk" %}
     {% include "partials/components/navigation.njk" %}
 </header>
