--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -73,18 +73,18 @@ main h4,
     padding-left: 1em;
   }
 
-  a[rel~='external']::after,
-  a[href^='mailto:']::after {
-    background-color: currentcolor;
-    content: '';
-    margin-bottom: rem(-4);
-    margin-left: rem(4);
-    mask-image: url('../images/external.svg');
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: 1.5em;
-    padding-left: 1em;
-  }
+  // a[rel~='external']::after,
+  // a[href^='mailto:']::after {
+  //   background-color: currentcolor;
+  //   content: '';
+  //   margin-bottom: rem(-4);
+  //   margin-left: rem(4);
+  //   mask-image: url('../images/external.svg');
+  //   mask-position: center;
+  //   mask-repeat: no-repeat;
+  //   mask-size: 1.5em;
+  //   padding-left: 1em;
+  // }
 }
 
 blockquote {
