fix: resolve lint error

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -37,7 +37,7 @@ a:focus {
 
 a[hreflang],
 a[download],
-a[rel="external"] {
+a[rel='external'] {
   svg {
     display: inline-block;
     margin-left: 0.25em;
