--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -28,12 +28,38 @@ a {
   text-decoration: underline;
 }
 
-a:hover,
-a:focus {
-  background: var(--fl-linkColor, var(--accent, var(--yellow-500)));
-  color: var(--fl-bgColor, currentColor);
-  outline: none;
+main,
+footer {
+  a {
+    border-radius: 5px;
+  }
+  
+  a:hover,
+  a:focus,
+  a:active {
+    outline-style: solid;
+    outline-width: 4px;
+  }
+
+  a:hover {
+    color: var(--fl-bgColor, currentColor);
+    background: var(--fl-linkColor, var(--accent, var(--yellow-500))) !important;
+    outline-color: var(--fl-linkColor, var(--accent, var(--yellow-500)));
+  }
+
+  a:focus {
+    outline-color: var(--fl-linkColor, var(--indigo-800));
+    outline-offset: 2px;
+    outline-width: 2px;
+  }
+
+  a:active {
+    color: var(--fl-bgColor, var(--white));
+    background: var(--fl-linkColor, var(--indigo-800));
+    outline-color: var(--fl-linkColor, var(--indigo-800));
+  }
 }
+
 
 a[hreflang],
 a[download],
