--- a/src/assets/styles/components/_nav--secondary.scss
+++ b/src/assets/styles/components/_nav--secondary.scss
@@ -15,6 +15,7 @@
 .menu--secondary a {
   align-items: center;
   border-bottom: rem(1) solid var(--fl-linkColor, var(--black));
+  border-radius: 0;
   display: block;
   display: flex;
   flex-direction: row;
@@ -30,6 +31,7 @@
       calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)),
       var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
     color: var(--fl-bgColor, var(--white));
+    outline: transparent;
   }
 
   &:active {
@@ -37,7 +39,8 @@
     box-shadow:
       calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)),
       var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
-    color: var(--fl-bgColor);
+    color: var(--fl-bgColor, var(--white));
+    outline: transparent;
   }
 
   &::after {
