--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -81,12 +81,10 @@ a[rel='home'] {
   border: 2px solid;
   border-radius: 5px;
   outline: none;
-  &:not(:focus):not(:hover) {
+
+  &:not(:focus, :hover) {
     // override UIO styles on default state
-    border-bottom-color: transparent !important;
-    border-left-color: transparent !important;
-    border-right-color: transparent !important;
-    border-top-color: transparent !important;
+    border-color: transparent !important;
   }
 }
 
