refactor page-header as a component

--- a/src/_includes/partials/components/page-header.njk
+++ b/src/_includes/partials/components/page-header.njk
@@ -1,4 +1,4 @@
-<header {% if locale !== 'en-CA' %} lang="en-CA" dir="ltr" {% endif %}>
+<header class="page-header" {% if locale !== 'en-CA' %} lang="en-CA" dir="ltr" {% endif %}>
     <div class="wrapper">
         {% set breadcrumbs = [] %}
         {% if eleventyNavigation.key and 'projects' not in page.url %}
