fix hover and focus styles of the nav bar and the footer

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -27,6 +27,7 @@
   'components/image',
   'components/nav',
   'components/nav--secondary',
+  'components/page-header',
   'components/pagination',
   'components/metadata';
 
