--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -8,10 +8,11 @@
   background: var(--fl-bgColor, var(--header-bg, var(--indigo-100)));
   color: var(--fl-fgColor, var(--header-fg, $black));
   display: flex;
+  justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
   max-width: calc(var(--max-width) + var(--gutter));
-  padding: 0;
+  padding-top: 4px;
   position: relative;
   width: calc(100vw - var(--gutter));
 
@@ -26,6 +27,17 @@
     transform: translateX(-50%);
     width: 100vw;
     z-index: -1;
+  }
+}
+
+.banner a {
+  &:hover,
+  &:focus {
+    background: var(--fl-fgColor, var(--black));
+    color: var(--fl-bgColor, var(--white));
+    outline-style: solid;
+    outline-width: 2px;
+    outline-color: var(--fl-linkColor, transparent);
   }
 }
 
