--- a/src/assets/styles/components/_page-header.scss
+++ b/src/assets/styles/components/_page-header.scss
@@ -8,20 +8,32 @@
   position: relative;
 
   .wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content min-content min-content;
     margin: 0;
     margin-left: 50%;
     transform: translateX(-50%);
     width: calc(100vw - var(--gutter));
+
+    h1 {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
   }
 
   .breadcrumbs {
     font-family: var(--fl-font-family, var(--ff-display));
     font-size: var(--step-2);
     font-weight: var(--fw-semibold);
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
   }
 
   .intro {
     font-size: var(--step--1);
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
     margin-top: rem(20);
   }
 }
