use relative values instead of px

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -31,14 +31,14 @@ a {
 main,
 footer {
   a {
-    border-radius: 5px;
+    border-radius: rem(5);
   }
 
   a:hover,
   a:focus,
   a:active {
     outline-style: solid;
-    outline-width: 2px;
+    outline-width: rem(3);
   }
 
   a:hover {
@@ -49,8 +49,8 @@ footer {
 
   a:focus {
     outline-color: var(--fl-linkColor, var(--indigo-800));
-    outline-offset: 2px;
-    outline-width: 2px;
+    outline-offset: rem(3);
+    outline-width: rem(3);
   }
 
   a:active {
@@ -78,7 +78,7 @@ a[rel='external'] {
 }
 
 a[rel='home'] {
-  border-radius: 5px;
+  border-radius: rem(5);
 }
 
 a[hreflang] {
