--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -48,8 +48,8 @@
 .footer a {
   &:focus {
     outline-color: var(--fl-linkColor, var(--yellow-500));
-    outline-offset: 2px;
-    outline-width: 2px;
+    outline-offset: rem(3);
+    outline-width: rem(3);
   }
 
   &:hover {
