fix: resolve assets issue

--- a/src/_includes/partials/global/scripts.njk
+++ b/src/_includes/partials/global/scripts.njk
@@ -1,2 +1,2 @@
 {% uioScripts %}
-<script type="text/javascript" src="/assets{{ assets['/scripts/app.js'] }}" defer></script>
+<script type="text/javascript" src="/assets/scripts/app.js" defer></script>
