--- a/src/assets/styles/components/_page-header.scss
+++ b/src/assets/styles/components/_page-header.scss
@@ -27,24 +27,26 @@
 }
 
 @include breakpoint-up(sm) {
-  .wrapper {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: min-content min-content min-content;
+  .page-header {
+    .wrapper {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-template-rows: min-content min-content min-content;
 
-    h1 {
-      grid-column: 1 / 2;
-      grid-row: 2 / 3;
+      h1 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+      }
     }
-  }
 
-  .breadcrumbs {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-  }
+    .breadcrumbs {
+      grid-column: 1 / 3;
+      grid-row: 1 / 2;
+    }
 
-  .intro {
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    .intro {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+    }
   }
 }
