--- a/src/admin/admin.njk
+++ b/src/admin/admin.njk
@@ -11,14 +11,14 @@ permalink: '/admin/index.html'
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://cdn.jsdelivr.net/npm/netlify-cms@2.10.192/dist/netlify-cms.js" integrity="sha256-Zh4YWc/jM51bs4TkmlBgSOTVk7aUoR7IwKuCJrsLe4w=" crossorigin="anonymous"></script>
-  {% if global.context == "production" %}
-  <script src="https://cdn.jsdelivr.net/npm/react@16.14.0/umd/react.production.min.js" integrity="sha256-XO+TZ9K8q6JbdNIODhOdLPkA6RI+X94mEBruf0D2tc8=" crossorigin="anonymous"></script>
+  <script src="/lib/cms/netlify-cms.js"></script>
+  {% if env.context === "dev" %}
+  <script src="/lib/cms/react.development.js"></script>
   {% else %}
-  <script src="https://cdn.jsdelivr.net/npm/react@16.14.0/umd/react.development.js" integrity="sha256-db9g8+oOPLzb3syQLuuEK2y+OduOYvH6f5GnVdUdAgw=" crossorigin="anonymous"></script>
+  <script src="/lib/cms/react.production.min.js"></script>
   {% endif %}
-  <script src="https://cdn.jsdelivr.net/npm/prop-types@15.8.1/prop-types.min.js" integrity="sha256-5lNHGrqCR4au5dzhvLWobtMMhRjTRtKs4EYKVjOpy9s=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/nunjucks@3.2.3/browser/nunjucks-slim.min.js" integrity="sha256-sF3DVE/zfImpeam2xPb1Qg8qfXksKN0UukMg0uriPaE=" crossorigin="anonymous"></script>
+  <script src="/lib/cms/prop-types.min.js"></script>
+  <script src="/lib/cms/nunjucks-slim.min.js"></script>
   <script src="/admin/templates.js"></script>
   <script src="/admin/previews.js"></script>
 </body>
