--- a/src/assets/styles/components/_page-header.scss
+++ b/src/assets/styles/components/_page-header.scss
@@ -28,25 +28,17 @@
 
 @include breakpoint-up(sm) {
   .page-header {
-    .wrapper {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      grid-template-rows: min-content min-content min-content;
-
-      h1 {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-      }
+    
+    h1 {
+      width: 66%;
     }
 
     .breadcrumbs {
-      grid-column: 1 / 3;
-      grid-row: 1 / 2;
+      width: 100%;
     }
 
     .intro {
-      grid-column: 1 / 2;
-      grid-row: 3 / 4;
+      width: 66%;
     }
   }
 }
