--- a/src/feed.njk
+++ b/src/feed.njk
@@ -1,28 +1,29 @@
 ---
 permalink: '/feed.xml'
+eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
   <title>{{ site.name }}</title>
-	<subtitle></subtitle>
+	<subtitle>{{ site.rssFeedSubtitle }}</subtitle>
 	<link href="{{ site.url }}{{ permalink }}" rel="self"/>
 	<link href="{{ site.url }}/"/>
 	<updated>{{ collections.postFeed | rssLastUpdatedDate }}</updated>
 	<id>{{ site.url }}</id>
 	<author>
-  <name>{{ site.name }}</name>
-  <email>{{ site.email }}</email>
+      <name>{{ site.name }}</name>
+      <email>{{ site.email }}</email>
 	</author>
 	{% for post in collections.postFeed %}
-  {% set absolutePostUrl %}{{ site.url }}{{ post.url | url }}{% endset %}
-  <entry>
-    <title>{{ post.data.title }}</title>
-    <link href="{{ absolutePostUrl }}"/>
-    <updated>{{ post.date | rssDate }}</updated>
-    <id>{{ absolutePostUrl }}</id>
-    <content type="html"><![CDATA[
-      {{ post.templateContent | safe }}
-    ]]></content>
-  </entry>
+      {% set absolutePostUrl %}{{ site.url }}{{ post.url | url }}{% endset %}
+    <entry>
+      <title>{{ post.data.title }}</title>
+      <link href="{{ absolutePostUrl }}"/>
+      <updated>{{ post.date | rssDate }}</updated>
+      <id>{{ absolutePostUrl }}</id>
+      <content type="html"><![CDATA[
+        {{ post.templateContent | safe }}
+      ]]></content>
+    </entry>
 	{% endfor %}
 </feed>
