--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -3,13 +3,17 @@ permalink: /sitemap.xml
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
-<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" xmlns:xhtml="http://www.w3.org/1999/xhtml">
     {% for page in collections.all %}
-        {% if page.url %}
-            <url>
-                <loc>{{ site.url }}{{ page.url }}</loc>
-                <lastmod>{{ page.date.toISOString() }}</lastmod>
-            </url>
-        {% endif %}
-    {% endfor %}
+    {%- if page.url and page.data.locale == "en-CA" -%}
+    <url>
+        <loc>{{ site[defaultLanguage].url }}{{ page.url | url }}</loc>
+        <lastmod>{{ page.date.toISOString() }}</lastmod>
+        {% set links = page.url | locale_links %}
+        {%- for link in links -%}
+        <xhtml:link rel="alternate" hreflang="{{ link.lang }}" href="{{ site[defaultLanguage].url }}{{ link.url }}"/>
+        {%- endfor %}
+    </url>
+    {% endif -%}
+    {%- endfor -%}
 </urlset>
