fix: get language direction properly

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ locale or 'en-CA' }}" dir="{{ config.languages[locale].dir if locale else 'ltr' }}" class="no-js">
+<html lang="{{ locale or 'en-CA' }}" dir="{{ supportedLanguages[locale].dir if locale else 'ltr' }}" class="no-js">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
